template-resource-server/src/main/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${project.artifactId}-deployment
  namespace: ${project.parent.artifactId}
  labels:
    app: ${project.artifactId}
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ${project.artifactId}
  template:
    metadata:
      labels:
        app: ${project.artifactId}
    spec:
      containers:
        - name: ${project.artifactId}
          image: ${docker.image.name}
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
