template-resource-server/src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}-service
  namespace: ${project.parent.artifactId}
spec:
  selector:
    app: ${project.artifactId}
  ports:
    - protocol : TCP
      port: 8080
      targetPort: 8080
