template-resource-server/src/main/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${project.artifactId}-ingress
  namespace: ${project.parent.artifactId}
  labels:
    name: ${project.artifactId}-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${project.artifactId}-service
                port:
                  number: 8080
